# gandi-email

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  on-push.yml  on-release.yml
src/: lib.rs  main.rs
