[package]
name = "gandi-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "4"
clap = { version = "3", features = ["derive"] }
dialoguer = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
