[package]
name = "gandi-email"
version = "1.0.1"
edition = "2021"
description = "CLI tool for Gandi Email API"
keywords = ["gandi", "cli", "api"]
categories = ["command-line-utilities", "api-bindings"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qt2/gandi-email"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

# For CLI
clap = { version = "3", features = ["derive"] }
dialoguer = "0.9"
dirs = "4"
toml = "0.5"

# Settings used by cargo-binstall
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
